--- a/src/pages/LoginPage.css
+++ b/src/pages/LoginPage.css
@@ -6,6 +6,7 @@
   border-radius: 5px;
   background-color: #fff;
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
+  margin-bottom: 375px;
 }
 
 .form-control {
@@ -48,4 +49,3 @@
   background-color: #0052cc;
   border-color: #0052cc;
 }
-
